--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,9 @@ dependencies:
   path_provider:
   open_file:
   google_maps_flutter:
+#  flutter_background_geolocation:
   geocoding:
-#  geolocator: ^12.0.0
+  geolocator:
 #  esc_pos_printer:
 #  esc_pos_utils:
 
