--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4+1
+version: 1.0.5+1
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -48,6 +48,7 @@ dependencies:
   image_picker:
   intl:
   printing:
+#  awesome_drawer_bar:
   syncfusion_flutter_pdf:
   number_to_words:
   path_provider:
@@ -61,6 +62,8 @@ dependencies:
 #  esc_pos_utils:
 #  flutter_image_compress:
   image:
+#  flutter_zoom_drawer:
+#  get:
 
 
 dev_dependencies:
