--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   package_info_plus: ^8.0.0
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  signature:
   dio:
   image_picker:
   lottie:
