--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
-  horizontal_week_calendar:
+#  horizontal_week_calendar:
 #  calendar_slider:
+  table_calendar:
   url_launcher: ^6.2.6
   fluttertoast: ^8.2.5
   flutter_timezone: ^3.0.1
