--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.3.3+1
+version: 1.7.2+1
 
 environment:
   sdk: '>=3.3.3 <4.0.0'
@@ -53,7 +53,8 @@ dependencies:
   permission_handler:
   syncfusion_flutter_pdf:
   flutter_svg:
-
+#  flutter_barcode_scanner:
+  mobile_scanner:
 #  speech_to_text:
 #  avatar_glow:
 #  highlight_text:
@@ -75,6 +76,8 @@ dependencies:
   image:
 #  flutter_zoom_drawer:
 #  get:
+  percent_indicator:
+  pie_chart:
 
 
 dev_dependencies:
