--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.8+1
-
+version: 2.8.8+1
 environment:
   sdk: '>=3.3.3 <4.0.0'
 
@@ -79,6 +78,9 @@ dependencies:
 #  get:
   percent_indicator:
   pie_chart:
+  syncfusion_flutter_charts:
+  flutter_blue_plus:
+  dropdown_search: ^5.0.6
 
 
 dev_dependencies:
