--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.8.8+1
+version: 3.1.3+1
 environment:
   sdk: '>=3.3.3 <4.0.0'
 
@@ -80,7 +80,7 @@ dependencies:
   pie_chart:
   syncfusion_flutter_charts:
   flutter_blue_plus:
-  dropdown_search: ^5.0.6
+  dropdown_search:
 
 
 dev_dependencies:
